[metadata]
name = twitch_hdt_ebs
version = 0.0.1
description = Twitch EBS for Hearthstone Deck Tracker
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/twitch-hdt-ebs/
download_url = https://github.com/HearthSim/twitch-hdt-ebs/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django :: 2.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Django==2.2.12
	django-allauth==0.41.0
	django-cors-headers==2.4.0
	django-oauth-toolkit==1.2.0
	django-redis==4.10.0
	djangorestframework==3.11.0
	psycopg2-binary==2.7.4
	PyJWT==1.7.1
	sentry_sdk==0.14.3
	hearthsim-identity==3.0.1
	hearthsim-instrumentation==0.1.0

[options.packages.find]
exclude =
	tests
