[metadata]
name = twitch_hdt_ebs
version = 0.0.1
description = Twitch EBS for Hearthstone Deck Tracker
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/twitch-hdt-ebs/
download_url = https://github.com/HearthSim/twitch-hdt-ebs/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django :: 2.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Django==3.2.12
	django-allauth==0.45.0
	django-cors-headers==3.2.1
	django-oauth-toolkit==1.2.0
	django-redis==4.12.1
	djangorestframework==3.12.4
	psycopg2-binary==2.9.3
	PyJWT==1.7.1
	python-redis-lock==3.7.0
	redis==3.3.8
	sentry_sdk==1.5.8
	shortuuid==0.5.0
	hearthsim-identity==3.0.1
	hearthsim-instrumentation==0.1.0
	django-hearthstone==0.8.0
	urllib3<2

[options.packages.find]
exclude =
	tests
